welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:11: error: Int does not take parameters
				for (k<-1 to diag()+1){
                                                 ^